--- a/WQD7001-project.Rmd
+++ b/WQD7001-project.Rmd
@@ -60,7 +60,7 @@ df1[col_factors] <- lapply(df1[col_factors], factor)
 col_factorsO <- c('famsize')
 df1[col_factorsO] <- lapply(df1[col_factorsO], ordered, levels = c('LE3','GT3'))
 
-col_factorsO <- c(names(df1[24:29]),'Medu','Fedu','traveltime','studytime')
+col_factorsO <- c(names(df1[24:29]),'Medu','Fedu','traveltime','studytime','famsize')
 df1[col_factorsO] <- lapply(df1[col_factorsO], ordered)
 
 # List columns that should be binary
@@ -95,17 +95,22 @@ sum(is.na(df1))
 
 # Display all the unordered factors in bar-plot
 for (i in col_factors){
-  barplot(table(df1[i]))
+  barplot(table(df1[i]), main = i)
 }
 
 # Display all the ordered factors in bar-plot
 for (i in col_factorsO){
-  barplot(table(df1[i]))
+  barplot(table(df1[i]), main = i)
 }
 
 # Display all the logical values in bar-plot
 for (i in col_binary){
-  barplot(table(df1[i]))
+  barplot(table(df1[i]), main = i)
+}
+
+# Boxplot for all integer columns
+for (i in c('absences','G1','G2','G3')){
+  boxplot(df1[i], main = i)
 }
 ```
 
