--- a/WQD7001-project.Rmd
+++ b/WQD7001-project.Rmd
@@ -123,5 +123,57 @@ nrow(df1)
 paste0("There are ",sum(df1$absences > outliers_up)," outliers out of ",nrow(df1),".")
 paste0(round((15/395)*100,2),"% of the values in the absences column are outliers and since it is less than 10% of the dataset we can remove the outliers.")
 
-```
+# Group by both fathers and mothers education
+df1 %>% 
+  select(Medu,Fedu,G3) %>% 
+  group_by(Medu,Fedu) %>% 
+  summarise(sum(G3))
 
+# Group by mothers education
+df1_Medu <- df1 %>% 
+    select(Medu,G3) %>% 
+    group_by(Medu) %>% 
+    summarise(G3_sum = sum(G3))
+
+# Scatter plot for mothers education vs grades
+df1_Medu %>% 
+  plot(G3_sum ~ Medu, main="Mother's education vs grades", 
+   xlab="Mother's education level ", ylab="Grades of students")
+
+# Group by fathers education
+df1_Fedu <- df1 %>% 
+    select(Fedu,G3) %>% 
+    group_by(Fedu) %>% 
+    summarise(G3_sum = sum(G3))
+
+# Scatter plot for fathers education vs grades
+df1_Fedu %>% 
+  plot(G3_sum ~ Medu, main="Father's education vs grades", 
+   xlab="Father's education level ", ylab="Grades of students")
+
+# Group by mothers education and summarise failure
+df1_Medu <- df1 %>% 
+    select(Medu,failures) %>% 
+    group_by(Medu) %>% 
+    summarise(G3_sum = sum(failures))
+
+# Scatter plot for mothers education vs failures
+df1_Medu %>% 
+  plot(G3_sum ~ Medu, main="Mother's education vs failures", 
+   xlab="Mother's education level ", ylab="Failure of students")
+
+
+
+# Group by fathers education and summarise failure
+df1_Fedu <- df1 %>% 
+    select(Fedu,failures) %>% 
+    group_by(Fedu) %>% 
+    summarise(G3_sum = sum(failures))
+
+# Scatter plot for fathers education vs failures
+df1_Fedu %>% 
+  plot(G3_sum ~ Medu, main="Father's education vs failures", 
+   xlab="Father's education level ", ylab="Failure of students")
+
+
+```
